@@ -1,4 +1,8 @@
 Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
+	* termcap.c:
+	strcmp() can return values other than -1/0/+1
+
+Sat Jun  8 2002  Vitezslav Samel <samel@mail.cz>
 	* b.c, bw.c, macro.c, path.c, pw.c, queue.h, rc.c, regex.c, scrn.c,
 	scrn.h, tab.c, termcap.c, termidx.c, tty.c, tw.c, ublock.c, uedit.c,
 	uerror.c, ufile.c, uformat.c, undo.c, usearch.c, ushell.c, vfile.c,
